--- a/style/style.css
+++ b/style/style.css
@@ -183,6 +183,12 @@ th, td {
 .divTable {
     width: 100%;
     overflow-x: scroll;
+    scrollbar-width: none; /* Firefox */
+    -ms-overflow-style: none; /* IE 10+ */
+}
+
+.divTable::-webkit-scrollbar {
+  display: none; /* Chrome, Safari */
 }
 
 .input-group {
